[tool.poetry]
name = "imgrott"
version = "0.1.0"
description = "Growatt Server for Inverters and Smart Monitors"
authors = ["Alfredo Miranda <alfredocdmiranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
libscrc = "^1.8.1"
pydantic-settings = "^2.2.1"

[tool.poetry.scripts]
imgrott = "imgrott.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"